add projects description

--- a/solutions.html
+++ b/solutions.html
@@ -81,7 +81,7 @@
 
                             Password:12345    </p>
                         <div class="col-12 col-12-small">
-
+                            Tools used for development
                             <h6>
                                 <ul >
                                     <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Docker</li>
@@ -128,9 +128,9 @@
 
                             Username:admin
 
-                            Password:12345
+                            Password:12345 </p>
                         <div class="col-12 col-12-small">
-
+                            Tools used for development
                         <h6>
                             <ul >
                                 <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Docker</li>
