--- a/solutions.html
+++ b/solutions.html
@@ -84,7 +84,7 @@
                             Tools used for development
                             <h6>
                                 <ul >
-                                    <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Docker</li>
+                                    <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Datatables,Docker</li>
                                     <li>AWS Elastic BeanStalk,AWS RouteS3,Javascript/JQuery/Ajax</li>
 
                                 </ul></h6>
@@ -133,7 +133,7 @@
                             Tools used for development
                         <h6>
                             <ul >
-                                <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Docker</li>
+                                <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Datatables,Docker</li>
                                 <li>AWS EC2 Ubuntu server,AWS RouteS3,Javascript/JQuery/Ajax</li>
 
                             </ul></h6>
