add projects description

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 											<li>PHP 7.0</li>
 											<li>Javascript/Ajax</li>
 											<li>Dart</li>
+											<li>Java</li>
+
 											<li>C++</li>
 											<li>Html/Css</li>
 											<li>python</li>
@@ -84,7 +86,8 @@
 										<h3><a href="solutions.html" class="link">Web and app development frameworks</a></h3>
 										<h6><ul>
 											<li>Laravel </li>
-											<li>Cake</li>
+											<li>Springboot</li>
+											<li>Thymeleaf</li>
 											<li>Codeigniter</li>
 											<li>Flutter</li>
 											<li>Apache Cordova</li>
