add projects description

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<header class="major">
 										<h3><a href="solutions.html" class="link">DeVop /OS/web servers Tools Experience</a></h3>
 										<h6><ul>
-											<li>Git/Nginx/Apache</li>
+											<li>Git/Nginx/Apache/Tomcat/Maven</li>
 											<li>Docker(Community && Enterprice)</li>
 											<li>Kubernetes(training)</li>
 											<li>Jenkins(training)</li>
