--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Full Stack </strong> <span>Engineer | Developer</span></a>
+						<a href="index.html" class="logo"><strong>Full Stack </strong> <span>Engineer<span>|<span>Developer</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
