--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<h1>Hi, my name is Kwafo Nana Mensah</h1>
 							</header>
 							<div class="content">
-										<p>Problem Solver ,Innovator, Quick Learner<br />
+										<p>Problem Solver | Innovator<br />
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
