--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<h1>Hi, my name is Kwafo Nana Mensah</h1>
 							</header>
 							<div class="content">
-										<p>Problem Solver<span>|<span>Innovator<br />
+										<p>Problem Solver<span>|<span>Innovator<span>|<span>Forever<span>Learning<br />
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
@@ -75,7 +75,7 @@
 											<li>python</li>
 											<li>YAML/XML/JSON</li>
 										</ul></h6>
-										<p>Click,to see great stuff!</p>
+										<p>Click to see great things!</p>
 									</header>
 								</article>
 								<article>
