--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<h1>Hi, my name is Kwafo Nana Mensah</h1>
 							</header>
 							<div class="content">
-										<p>Problem Solver<span>|<span>Innovator<span>|<span>Forever<span>Learning<br />
+										<p>Problem Solver<span>|<span>Innovator|<span>ForeverLearning<br />
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
@@ -96,7 +96,7 @@
 
 
 										</ul></h6>
-										<p>Click,to see great stuff!</p>
+										<p>Click to see great things!</p>
 									</header>
 								</article>
 								<article>
@@ -115,7 +115,7 @@
 
 
 										</ul></h6>
-										<p>Click,to see great stuff!</p>
+										<p>Click to see great things!</p>
 									</header>
 								</article>
 								<article>
@@ -136,7 +136,7 @@
 
 
 										</ul></h6>
-										<p>Click,to see great stuff!</p>
+										<p>Click to see great things!</p>
 									</header>
 								</article>
 								<article>
@@ -155,7 +155,7 @@
 
 
 										</ul></h6>
-										<p>Click,to see great stuff!</p>
+										<p>Click to see great things!</p>
 									</header>
 								</article>
 								<article>
@@ -174,7 +174,7 @@
 
 
 										</ul></h6>
-										<p>Click,to see great stuff!</p>
+										<p>Click to see great things!</p>
 									</header>
 								</article>
 
