--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Kwafo Nana Mensah</h1>
+								<h1>Hi, my name is Kwafo Mensah</h1>
 							</header>
 							<div class="content">
-										<p>Problem Solver<span>|<span>Innovator|<span>ForeverLearning<br />
+										<p>Problem Solver<span>|<span>Innovator|<span>Forever<span>Learning<br />
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
