--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<h1>Hi, my name is Kwafo Mensah</h1>
 							</header>
 							<div class="content">
-										<p>Problem Solver<span>|<span>Innovator|<span>Forever<span>Learning<br />
+										<p>Problem Solver | Innovator | Always Hungry<br />
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
@@ -63,7 +63,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Programming Languages</a></h3>
+										<h3><a href="solutions.html" class="link">Programming languages</a></h3>
 										<h6><ul>
 											<li>PHP 7.0</li>
 											<li>Javascript/Ajax</li>
@@ -83,7 +83,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Web and app development frameworks</a></h3>
+										<h3><a href="solutions.html" class="link">Web/App Development Frameworks</a></h3>
 										<h6><ul>
 											<li>Laravel </li>
 											<li>Springboot</li>
@@ -104,10 +104,10 @@
 										<img src="/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Database Technologies and tools</a></h3>
+										<h3><a href="solutions.html" class="link">Database Tech and Tools</a></h3>
 										<h6><ul>
 											<li>Mysql </li>
-											<li>Microsoft sql server</li>
+											<li>Microsoft SQL server</li>
 											<li>Dynamodb</li>
 											<li>Flutter</li>
 											<li>Firebase</li>
@@ -123,12 +123,12 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">DeVop /OS/web servers Tools Experience</a></h3>
+										<h3><a href="solutions.html" class="link">DevOp/OS/Web Server Tools</a></h3>
 										<h6><ul>
 											<li>Git/Nginx/Apache/Tomcat/Maven</li>
-											<li>Docker(Community && Enterprice)</li>
-											<li>Kubernetes(training)</li>
-											<li>Jenkins(training)</li>
+											<li>Docker - Community & Enterprise </li>
+											<li>Kubernetes - training</li>
+											<li>Jenkins - training</li>
 											<li>Linux</li>
 											<li>Windows</li>
 
@@ -163,7 +163,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Cloud Technologies experience</a></h3>
+										<h3><a href="solutions.html" class="link">Cloud Techn Experience</a></h3>
 										<h6><ul>
 											<li>AWS Compute</li>
 											<li>AWS RDS</li>
@@ -186,8 +186,8 @@
 									<header class="major">
 										<h2>Profile</h2>
 									</header>
-									<p>I am a very smart and passionate developer with wealth of experience in Software Engineering, DevOps Engineering, MobileApplication Development (Apache Cordova), USSD Applications Development, WebApplication Development, Linus Systems Configuration & Administration,  windows server 2012.
-										I holds a BSc. (Hons) in Computer Science and Engineering from the University of Mines and Technology.</p>
+									<p>A highly skilled and passionate software developer, my wealth of experience in software engineering spans across DevOps, mobile app development - Apache Cordova, USSD app development, web app development, with complimentary proficiency in Linus Systems config/admin and Windows 2012.
+										BSc. (Hons) in Computer Science and Engineering - University of Mines and Technology, Ghana.</p>
 
 									<div class="row">
 
