--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Programming languages</a></h3>
+										<h3><a href="solutions.html" class="link">Programming Languages</a></h3>
 										<h6><ul>
 											<li>PHP 7.0</li>
 											<li>Javascript/Ajax</li>
@@ -83,7 +83,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Web/App Development Frameworks</a></h3>
+										<h3><a href="solutions.html" class="link">Web and Application Development Frameworks</a></h3>
 										<h6><ul>
 											<li>Laravel </li>
 											<li>Springboot</li>
@@ -104,7 +104,7 @@
 										<img src="/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Database Tech and Tools</a></h3>
+										<h3><a href="solutions.html" class="link">Database Technologies and Tools</a></h3>
 										<h6><ul>
 											<li>Mysql </li>
 											<li>Microsoft SQL server</li>
@@ -123,7 +123,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">DevOp/OS/Web Server Tools</a></h3>
+										<h3><a href="solutions.html" class="link">DevOp, OS and Web Server Tools</a></h3>
 										<h6><ul>
 											<li>Git/Nginx/Apache/Tomcat/Maven</li>
 											<li>Docker - Community & Enterprise </li>
@@ -144,7 +144,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Software Architecture Experience</a></h3>
+										<h3><a href="solutions.html" class="link">Software Architecture</a></h3>
 										<h6><ul>
 											<li>MVC Architecture</li>
 											<li>Monolitic Architecture</li>
@@ -163,7 +163,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Cloud Techn Experience</a></h3>
+										<h3><a href="solutions.html" class="link">Cloud Tech</a></h3>
 										<h6><ul>
 											<li>AWS Compute</li>
 											<li>AWS RDS</li>
@@ -184,10 +184,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Profile</h2>
+										<h2>About Me</h2>
 									</header>
 									<p>A highly skilled and passionate software developer, my wealth of experience in software engineering spans across DevOps, mobile app development - Apache Cordova, USSD app development, web app development, with complimentary proficiency in Linus Systems config/admin and Windows 2012.
-										BSc. (Hons) in Computer Science and Engineering - University of Mines and Technology, Ghana.</p>
+										
+										BSc. (Hons) Computer Science and Engineering - University of Mines and Technology, Ghana.</p>
 
 									<div class="row">
 
