--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
 									</header>
 									<p>A highly skilled and passionate software developer, my wealth of experience in software engineering spans across DevOps, mobile app development - Apache Cordova, USSD app development, web app development, with complimentary proficiency in Linus Systems config/admin and Windows 2012.
 										
-										BSc. (Hons) Computer Science and Engineering - University of Mines and Technology, Ghana.</p>
+										</ul></h6>
+										<p>BSc. (Hons) Computer Science and Engineering - University of Mines and Technology, Ghana.</p>
 
 									<div class="row">
 
