--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@
 									</header>
 									<p>A highly skilled and passionate software developer, my wealth of experience in software engineering spans across DevOps, mobile app development - Apache Cordova, USSD app development, web app development, with complimentary proficiency in Linus Systems config/admin and Windows 2012.
 										
+										
+										<p>Coding and coding related research is what I do daily. I am always looking to connect with like-minded people and collaborate with organisations. The goal? To provide software support, solve project-related issues and contribute to the success of each individual project.
 										</ul></h6>
-										<p>BSc. (Hons) Computer Science and Engineering - University of Mines and Technology, Ghana.</p>
+										<p>I hold a BSc. (Hons) Computer Science and Engineering - University of Mines and Technology, Ghana.</p>
 
 									<div class="row">
 
