--- a/solutions.html
+++ b/solutions.html
@@ -20,7 +20,7 @@
     <!-- Header -->
     <!-- Note: The "styleN" class below should match that of the banner element. -->
     <header id="header" class="alt style2">
-        <a href="index.html" class="logo"><strong>Full Stack </strong> <span>Engineer/Developer</span></a>
+        <a href="index.html" class="logo"><strong>Full Stack </strong> <span>Engineer<span>|<span>Developer</span></a>
         <nav>
             <a href="#menu">Menu</a>
         </nav>
@@ -43,10 +43,10 @@
 								<img src="" alt="" />
 							</span>
             <header class="major">
-                <h1>A Showcase of my projects and Abilities </h1>
+                <h1>A Showcase of my Projects </h1>
             </header>
             <div class="content">
-                <p>Problem Solver ,Innovator, Quick Learner<br />
+                <p>Problem Solver | Innovator | Quick Learner<br />
                    </p>
             </div>
         </div>
@@ -66,26 +66,27 @@
                 <div class="content">
                     <div class="inner">
                         <header class="major">
-                            <h3>Crude Oil processing tool</h3>
+                            <h3>Crude Oil Processing Tool</h3>
                         </header>
                         <br>
-                            This is a bespoke web application designed using the monolithic architecture of software development.its main functionality is to generate custom reports after crude oil data from their various clients side are entered into the system.
+                            This is a bespoke web application designed using monolithic architecture - software development. It's main functionality is to generate custom reports after crude oil data from client side has been entered into the system.
 
-                            The application is deployed on windows server in-house for the client, which is  still in use and increasing productivity .
+                            This application is deployed on a windows server, in-house and which is still in use and increasing productivity for the client.
 
-                            A prototype of the application is what I have deployed here on my aws ec2 instance with dummy data.</br>
+                            A prototype of the application is what I have deployed here on AWS ec2 using dummy data.</br>
 
-                            Below are the login credentials </br>
+                            Login credentials are </br>
 
-                            Username:admin
-
-                            Password:12345    </p>
+                            Username: admin
+		    
+		    </ul></h6>
+                            Password: 12345    </p>
                         <div class="col-12 col-12-small">
                             Tools used for development
                             <h6>
                                 <ul >
-                                    <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Datatables,Docker</li>
-                                    <li>AWS Elastic BeanStalk,AWS RouteS3,Javascript/JQuery/Ajax</li>
+                                    <li>Laravel, Monolitic Architecture, MySql Server, MySql Server, Ajax, Datatables, Docker</li>
+                                    <li>AWS Elastic BeanStalk, AWS RouteS3, Javascript/JQuery/Ajax</li>
 
                                 </ul></h6>
 
@@ -122,19 +123,21 @@
                             <h3>Inventory Management Application</h3>
                         </header>
                         <p>
-                            This is a web application that I developed based on a generic requirement from sales store. The main functionality of this application is to manage all aspect of sales for a store. With my knowledge and experience in docker I have containerised this application, hosted it on my aws ec2 instance and populated with dummy data</br>
+                            This is a web application that I developed based on generic requirements for a sales store. The main functionality of this application is to manage all aspects of sales for the store. With my knowledge and experience in docker I have containerised this application, hosted the app on AWS ec2 and populated using dummy data</br>
 
-                            Below are the login credentials </br>
+                            Login credentials are</br>
 
-                            Username:admin
+                            Username: admin
 
-                            Password:12345 </p>
+		    
+		    </ul></h6>
+                            Password: 12345 </p>
                         <div class="col-12 col-12-small">
                             Tools used for development
                         <h6>
                             <ul >
-                                <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Datatables,Docker</li>
-                                <li>AWS EC2 Ubuntu server,AWS RouteS3,Javascript/JQuery/Ajax</li>
+                                <li>Laravel, Monolitic Architecture, MySql Server, MySql Server, Ajax,Datatables, Docker</li>
+                                <li>AWS EC2 Ubuntu server, AWS RouteS3, Javascript/JQuery/Ajax</li>
 
                             </ul></h6>
 
