--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 										<h3><a href="solutions.html" class="link">Programming Languages</a></h3>
 										<h6><ul>
 											<li>PHP 7.0</li>
-											<li>Javascript/Ajax</li>
+											<li>Javascript | Ajax</li>
 											<li>Dart</li>
 											<li>Java</li>
 
 											<li>C++</li>
 											<li>Html/Css</li>
 											<li>python</li>
-											<li>YAML/XML/JSON</li>
+											<li>YAML | XML | JSON</li>
 										</ul></h6>
 										<p>Click to see great things!</p>
 									</header>
@@ -125,7 +125,7 @@
 									<header class="major">
 										<h3><a href="solutions.html" class="link">DevOp, OS and Web Server Tools</a></h3>
 										<h6><ul>
-											<li>Git/Nginx/Apache/Tomcat/Maven</li>
+											<li>Git | Nginx | Apache | Tomcat | Maven</li>
 											<li>Docker - Community & Enterprise </li>
 											<li>Kubernetes - training</li>
 											<li>Jenkins - training</li>
@@ -266,7 +266,6 @@
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
 										<h3>Address</h3>
-										<span>233 Cartmell Drive<br />
 										Leeds<br />
 										United kingdom</span>
 									</div>
