--- a/solutions.html
+++ b/solutions.html
@@ -79,7 +79,7 @@
 
 
 
-                            Username: admin
+                            Username: admin</ul></h6>
 		    
 
 	    
@@ -89,8 +89,8 @@
                             Tools used for development
                             <h6>
                                 <ul >
-                                    <li>Laravel, Monolitic Architecture, MySql Server, MySql Server, Ajax, Datatables, Docker</li>
-                                    <li>AWS Elastic BeanStalk, AWS RouteS3, Javascript/JQuery/Ajax</li>
+                                    <li>Laravel | Monolitic Architecture | MySql Server | MySql Server | Datatables | Docker</li>
+                                    <li>AWS Elastic BeanStalk | AWS RouteS3 | Javascript, JQuery, & Ajax</li>
 
                                 </ul></h6>
 
@@ -131,15 +131,15 @@
 
                             Login credentials are</br>
 
-                            Username: admin
-		    </ul></h6>
+                            Username: admin</ul></h6>
+
                             Password: 12345 </p>
                         <div class="col-12 col-12-small">
                             Tools used for development
                         <h6>
                             <ul >
-                                <li>Laravel | Monolitic Architecture | MySql Server | MySql Server | Ajax | Datatables | Docker</li>
-                                <li>AWS EC2 Ubuntu server | AWS RouteS3 | Javascript/JQuery/Ajax</li>
+                                <li>Laravel | Monolitic Architecture | MySql Server | MySql Server | Datatables | Docker</li>
+                                <li>AWS EC2 Ubuntu server | AWS RouteS3 | Javascript, JQuery & Ajax</li>
 
                             </ul></h6>
 
