--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>A highly skilled and passionate software developer, my wealth of experience in software engineering spans across DevOps, mobile app development - Apache Cordova, USSD app development, web app development, with complimentary proficiency in Linus Systems config/admin and Windows 2012.
+									<p>A highly skilled and passionate software developer, my wealth of experience in software engineering spans across DevOps, mobile app development - Apache Cordova, USSD app development, web app development, with complimentary proficiency in Linus Systems config/admin and Windows Server 2012.
 										
 										
 										<p>Coding and coding related research is what I do daily. I am always looking to connect with like-minded people and collaborate with organisations.
