update profile page

--- a/solutions.html
+++ b/solutions.html
@@ -69,11 +69,7 @@
                             <h3>Crude Oil Processing Tool</h3>
                         </header>
                         <br>
-                            This is a bespoke web application designed using monolithic architecture - software development. It's main functionality is to generate custom reports after crude oil data from client side has been entered into the system.
-
-                            This application is deployed on a windows server, in-house and which is still in use and increasing productivity for the client.
-
-                            A prototype of the application is what I have deployed here on AWS ec2 using dummy data.</br>
+                        This is a bespoke web application designed using the monolithic architecture of software development. Its main function is to generate custom reports after crude oil data from the client-side has been entered into the system. This application is deployed on a windows server, in-house for the client. A prototype of the application is what I have deployed here on AWS ec2 instance and populated with dummy data.</br>
 
                             Login credentials are </br>
 
@@ -127,7 +123,7 @@
                             <h3>Inventory Management Application</h3>
                         </header>
                         <p>
-                            This is a web application that I developed based on generic requirements for a sales store. The main functionality of this application is to manage all aspects of sales for the store. With my knowledge and experience in docker I have containerised this application, hosted the app on AWS ec2 and populated using dummy data</br>
+                            This is a web application that I developed based on general requirements for a sales store. The main functionality of this application is to manage all aspects of sales for a store. With my knowledge and experience in docker, I have containerized this application and hosted the app on AWS ec2 instance. </br>
 
                             Login credentials are</br>
 
